--- a/bibliography.bib
+++ b/bibliography.bib
@@ -74,7 +74,7 @@
 
 @article{Intro1,
   title={Инфракрасная люминесценция и характеристики энергетического спектра полупроводников типа А4В6},
-  author={Засавицкий, ИИ},
+  author={Засавицкий, ии},
   journal={Труды ФИАН. Оптические и электрические свойства полупроводников},
   volume={224},
   pages={3--118},
@@ -212,6 +212,28 @@ and Spirin, K. and Aleshkin, V. and Gavrilenko, V. and Knap, W.},
   publisher={Российская академия наук, Отделение физических наук}
 }
 
+@article{Alymov:2018,
+  title = {Auger recombination in Dirac materials: A tangle of many-body effects},
+  author = {Alymov, Georgy and Vyurkov, Vladimir and Ryzhii, Victor and Satou, Akira and Svintsov, Dmitry},
+  journal = {Phys. Rev. B},
+  volume = {97},
+  issue = {20},
+  pages = {205411},
+  numpages = {13},
+  year = {2018},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.97.205411},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.97.205411}
+}
+
+@book{Vasko:2006,
+  title={Quantum Kinetic Theory and Applications: Electrons, Photons, Phonons},
+  author={Vasko, Fedir T and Raichev, Oleg E},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
+
 @article{Asryan:IOP:2005,
   title={Spontaneous radiative recombination and nonradiative Auger recombination in quantum-confined heterostructures},
   author={Asryan, Levon V},
@@ -221,6 +243,15 @@ and Spirin, K. and Aleshkin, V. and Gavrilenko, V. and Knap, W.},
   pages={1117},
   year={2005},
   publisher={IOP Publishing}
+}
+
+@article{Rumyantsev:2019,
+  title={Carrier Recombination, Long-Wavelength Photoluminescence, and Stimulated Emission in HgCdTe Quantum Well Heterostructures},
+  author={Rumyantsev, Vladimir and Fadeev, Mikhail and Aleshkin, Vladimir and Kulikov, Nikita and Utochkin, Vladimir and Mikhailov, Nikolai and Dvoretskii, Sergey and Pavlov, Sergey and H{\"u}bers, Heinz-Wilhelm and Gavrilenko, Vladimir and others},
+  journal={physica status solidi (b)},
+  pages={1800546},
+  year={2019},
+  publisher={Wiley Online Library}
 }
 
 
