--- a/sections/augerThresholdCalculation.tex
+++ b/sections/augerThresholdCalculation.tex
@@ -7,8 +7,8 @@
     Как известно в случае гетероструктур с квантовыми ямами состояние
     носителя заряда описывается несколькими квантовыми числами: номером зоны,
     дискретным квази-импульсом по направлению роста струтуры (поскольку его движение
-    в данном случае ограничено) и квази-импульсом, характеризующим движение
-    в плоскости ямы. Для простоты мы не будем отличать нумерацию зон и нумерацию
+    в данном случае ограничено) и квази-импульсом $\vec k$, характеризующим движение
+    в плоскости ямы. Мы не будем отличать нумерацию зон и нумерацию
     по поперечному импульсу, так называемая структура подзон. В таком случае мы 
     можем гамильтониан, имеющий собственные значения $\varepsilon_i (\vec{k})$. 
     В дальнейшем мы на некоторое время отвлечёмся от данной задачи и 
@@ -46,26 +46,27 @@
     \end{equation*}
 
     Здесь $\alpha$ равно 0 для электронов и 1 для дырок, если мы выбираем за 
-    начало отсчёта энергии дно валентной зоны $E_c = 0,~E_v = -E_g$
+    начало отсчёта энергии дно зоны проводимости $E_c = 0,~E_v = - \varepsilon_g$
     (в дальнейшем будет рассматриваться именно такая постановка задачи).
 
-    Для демонстрации наличия порога рассмотрим процесс с участием двух 
-    электронов и одной дырки (CCHC), имеющих начальную "кинетическую" энергию 
-    равную нулю $K_i = 0,~i=1,2,3$. Очевидно, что такой процесс соответствует
-    переходу в гамма-точке и возможен только при условии, что дно второй подзоны
-    имеет энергию ширины запрещённой зоны $\varepsilon_{C2}(0) = E_g$. Очевидно,
-    что такой процесс является беспороговым, однако возможен лишь в ряде
-    вырожденных случаев. В противном случае, такой процесс запрещён, а значит 
-    существует некий порог.
+    %Для демонстрации наличия порога рассмотрим процесс с участием двух 
+    %электронов и одной дырки (CCHC), имеющих начальную "кинетическую" энергию 
+    %равную нулю $K_i = 0,~i=1,2,3$. Очевидно, что такой процесс соответствует
+    %переходу в гамма-точке и возможен только при условии, что дно второй подзоны
+    %имеет энергию ширины запрещённой зоны $\varepsilon_{C2}(0) = E_g$. Очевидно,
+    %что такой процесс является беспороговым, однако возможен лишь в ряде
+    %вырожденных случаев. В противном случае, такой процесс запрещён, а значит 
+    %существует некий порог.
 
-    Попробуем формализовать эту задачу. Для начала заметим, что в силу закона
+    Попробуем формализовать задачу отыскания оже-процесса с наименьшей энергией. 
+    Для начала заметим, что в силу закона
     сохранения конечная энергия частицы напрямую связана с начальными "кинетическими".
     Если мы рассмотрим CCHC процесс, то "кинетическая" энергия конечной частицы
-    будет равна "кинетической" энергии начальных за вычетом $E_g$, что соответствует
+    будет равна "кинетической" энергии начальных за вычетом $\varepsilon_g$, что соответствует
     получению энергии от рекомбинации. Аналогично, и для HHCH процесса, однако
     при выбранном способе отсчёта энергии из полной конечной энергии потребуется 
-    вычитать уже $2E_g$ - один за счет энергии от рекомбинации, второй - из за того, 
-    что $E_v = - E_g$.
+    вычитать уже $2\varepsilon_g$ - один за счет энергии от рекомбинации, второй - из за того, 
+    что $E_v = - \varepsilon_g$.
 
     Тогда нам нужно будет найти минимальную энергию конечной частицы, учитывая
     однако законы сохранения (закон сохранения импульса уже учтён неявно), 
@@ -76,7 +77,7 @@
             \label{gfunc}
             \varepsilon_{th} = \min_{\vec{k}_1, \vec{k}_2, \vec{k}_3} K (\vec{k}_1, \vec{k}_2, \vec{k}_3);\\
             \begin{cases}
-                K  = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \beta \cdot E_g;\\
+                K  = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \beta \cdot \varepsilon_g;\\
                 \beta = \begin{cases}
                             1   & \text{CCHC}\\
                             2   & \text{HHCH}
@@ -95,11 +96,11 @@
     %Очевидно, что любое дисперсионное соотношение вблизи 
     
     В частности для решения такой задачи мы можем использовать метод 
-    неопределённых множителей лагранжа. В таком случае задача сведётся
+    неопределённых множителей Лагранжа. В таком случае задача сведётся
     к поиску экстремума функции (здесь уже неявно учтён 
     закон сохранения импульса):
     \begin{multline}
-        L (\vec{k}_1,\vec{k}_2,\vec{k}_3, \lambda) = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \beta E_g + \\
+        L (\vec{k}_1,\vec{k}_2,\vec{k}_3, \lambda) = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \beta \varepsilon_g + \\
             \lambda \cdot \left(\varepsilon_1(\vec{k}_1) + 
             \varepsilon_2(\vec{k}_2) - \varepsilon_3(\vec{k}_3) - \varepsilon_f(\vec{k}_1 + \vec{k}_2 + \vec{k}_j)\right);
     \end{multline}
@@ -146,13 +147,12 @@
     состояний должны быть по меньшей мере коллинеарны друг другу, а следовательно и 
     волновому вектору конечной частицы.
 
-    \section{Расчёт порога в HgCdTe}
+    \section{Расчёт порога оже-рекомбинации в гетероструктурах с КЯ на основе HgCdTe}
 
         Очевидно что все предыдущие рассуждения не имеют никакого смысла, если нам не известны дисперсионные 
         соотношения для частиц. Однако чтобы получить его нам необходимо конкретизировать
         рассматриваемую физическую задачу. В данной работе рассматривались квантовые ямы HgCdTe/CdHgTe, выращенные 
-        на плоскости [013] на буффере CdTe и подложке GaAs \cite{Varavin:2003}. Такое направление было выбрано в силу технологических причин (более
-        высокая скорость роста), буффер же отвечает за постоянную решётки и напряжения в кристалле,
+        на плоскости [013] на буффере CdTe. Буффер отвечает за постоянную решётки и напряжения в кристалле,
         которые могут существенно повлиять на вид дисперсионного соотношения.
 
         Сам расчёт дисперсионного соотношения осуществлялся по методу огибающих функций
@@ -172,11 +172,11 @@
         очередь приводило к неверным ответам. Такую проблему позволили решить сплайны 
         Акимы \cite{AkimaSplines}, которые при той же гладкости имеют отличные граничные 
         условия и не приводят к подобным ошибкам. Для работы со сплайнами применялся
-        маетематический пакет Dierckx \cite{Dierckx} для языка программирования 
+        математический пакет Dierckx \cite{Dierckx} для языка программирования 
         Julia. 
 
         После построения гладкой аппроксимации дисперсионных соотношений нам требуется 
-        найти минимум функции \ref{gfunc} с наложеными условиями. Очевидно, что такая 
+        найти минимум функции \eqref{gfunc} с наложеными условиями. Очевидно, что такая 
         функция может (и как правило имеет) не один минимум, поэтому приходится говорить
         про глобальную оптимизацию. Для её осуществления дисперсионные соотношения виртуально
         делятся на отрезки с одним знаком производной (с одним направлением групповой скорости)
@@ -186,8 +186,8 @@
         \cite{NLopt}. Очевидно, что для каждой тройки таких отрезков
         может быть только одна точка в пространстве $k_1,~k_2,k_3$ для которой может выполняться
         условие равенства групповых скоростей и законы сохранения. Также на основе апостериорного 
-        знания \ref{tmax} не имеет смысла рассмотрение 
-        процессов с энергией выше $2T$, где $T$ - температура, при которой производился расчёт 
+        знания \eqref{tmax} не имеет смысла рассмотрение 
+        процессов с энергией выше $2T$, где $T$ - температура, для которой производился расчёт 
         дисперсионного соотношения. В следствии рассмотрения всех 
         таких наборов выбирается один, имеющий наименьшую начальную кинетическую энергию - он и 
         соответствует пороговому процессу.
@@ -198,31 +198,31 @@
         сколь-нибудь большие импульсы. В то же время эффективная масса дырок намного больше,
         что позволяет им иметь большие импулься $k_c \ll k_v$. К тому же в случае квантовых ям
         дисперсионные соотношения для легких и тяжёлых дырок могут иметь боковые максимумы.
-        Эти боковые максимумы имеют потолки, лишь немного уступающие гамма-точке 
-        $E_v - E_s \ll E_g$. Для нас это имеет следующие последствия:
+        Эти боковые максимумы имеют потолки, лишь немного уступающие по энергии гамма-точке 
+        $E_v - E_s \le \varepsilon_g$. Для нас это имеет следующие последствия:
         \begin{itemize}
             \item боковые максимумы оказываются заселёнными;
             \item боковые максимумы не участвуют в процессе излучательной рекомбинации;
-            \item эффективная масса в этих максимумах велика $m_{hs} \gg m_c$, что позволяет
-                дыркам, вступающим в оже-процесс иметь большие импульсы.
+            \item боковые максимумы позволяют частицам иметь большой импульс.
         \end{itemize}
         
-        Из этого виднео, что подобные побочные максимумы могут существенно снижать пороги 
+        Из этого видно, что подобные побочные максимумы могут существенно снижать пороги 
         оже-рекомбинации, ухудшая тем самым потребительские свойства таких структур.
 
         Другой интересной возможностью являются процессы с участием двух дырок и 
         электрона (HHCH). Как правило такие процессы имеют большие пороговые энергии
         за счёт большей эффективной массы парных частиц.
         Однако именно они могут приводить к возникновению беспороговых переходов,
-        поскольку $E_v - E_{hh}(0) \ll E_{C2} - E_c$, что позволяет при перестройке
+        поскольку разность энергии в гамма точке для легких и тяжёлых дырок
+        меньше или равной ширине запрещённой зоны, что позволяет при перестройке
         температуры наблюдать беспороговые резонансные оже-процессы. Также в силу 
         возможного наличия боковых максимумов имеется большая вероятность подобрать
-        подобрать точки с равными групповыми скоростями.
+        точки с равными групповыми скоростями.
 
         \section{Сравнение теории и эксперимента}
 
-        Для демонстрации значимости порога оже-рекомбинации можно привести эмпирическую 
-        формулу, связывающую порог оже-процессов и максимальную температуру, при которой
+        В ходе многочисленных экспериментов была получена эмпирическая 
+        формула, связывающая порог оже-процессов и максимальную температуру, при которой
         наблюдается стимулированное излучение \cite{Rumyantsev:PTS:2018}:
 
         \begin{equation}
@@ -233,9 +233,9 @@
         Эта формула, к сожалению, не имеет внятного теоретического обоснования,
         однако работает для подавляющего большинства реально существующих гетероструктур
         HgCdTe с квантовыми ямами. Её можно интерпретировать, как условие на достаточную
-        заполненость носителями заряда состояний, с которых разрешены такие переходы.
+        заполненость носителями заряда состояний, с которых разрешены такие переходы \cite{Alymov:2018}.
         Особое внимание стоит уделить в данном случае заполнености валентной зоны, поскольку,
-        как было оговорено выше, чаще всего именно дырки обуславливают энергетику оже-процесса.
+        как было оговорено выше, чаще всего именно дырки обуславливают энергию оже-процесса.
 
         В качестве примеров рассмотрим структуры, рассмотренные в экспериментальной части:
         для начала возьмём образец, предназначенный для излучения на длине волны $14~\mu m$
@@ -256,7 +256,7 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/main_14u_80K_pic.pdf}
 
-                    \textbf{Рис. а: Образец с "грязными" КЯ.} Пороговая энергия 
+                    \textbf{(А) Образец с "грязными" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 18.6~meV$.
                 \end{center}
             \end{minipage}
@@ -265,10 +265,12 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/14u_pure_80K.pdf}
 
-                    \textbf{Рис. б: Образец с "чистыми" КЯ.} Пороговая энергия 
+                    \textbf{(Б) Образец с "чистыми" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 23.3~meV$.
                 \end{center}
             \end{minipage}
+            \caption{Расчёты дисперсионных соотношений и порогового оже-процесса
+            для структуры, рассчитанной на длину волны 14 $\mu m$}
         \end{figure}
         
         Аналогично поступим и со структурой расчитаной для излучения на длине волны  
@@ -285,8 +287,9 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/18u_impure_40K.pdf}
     
-                    \textbf{Рис. в: Образец с "грязными" КЯ.} Пороговая энергия 
+                    \textbf{(В) Образец с "грязными" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 15~meV$.
+                        \label{impure_18um}
                 \end{center}
             \end{minipage}
             \hfill
@@ -294,25 +297,30 @@
                 \begin{center}
                     \includegraphics[width=1.\linewidth]{./images/18u_pure_40K.pdf}
     
-                    \textbf{Рис. г: Образец с "чистыми" КЯ.} Пороговая энергия 
+                    \textbf{(Г) Образец с "чистыми" КЯ.} Пороговая энергия 
                         $\varepsilon_{th} \approx 37.3~meV$.
                 \end{center}
             \end{minipage}
+            \caption{Расчёты дисперсионных соотношений и порогового оже-процесса
+            для структуры, рассчитанной на длину волны 18 $\mu m$}
         \end{figure}
+
+        \vspace{0.75cm}
         
 
-        \section{Зависимость оже-порога в зависимости от состава барьера}
+        \section{Зависимость оже-порога от состава барьера}
 
-        Рассмотрим влияние высоты барьеров на порог оже-процессов. Для 
-        этого рассмотрим подробнее структуру для излучения на длине волны $18~\mu m$,
+        Помимо состава и толщины ямы существенное влияние на зонную структуру
+        и, как следствие, на порог оже-процессов может оказывать состав барьеров.
+        Рассмотрим подробнее структуру для излучения на длине волны $18~\mu m$,
         в силу большего интереса к длиноволновому стимулированному излучению.
 
         Интересно сравнить пороговые энергии для структуры, описанной выше, и структур на основе квантовых ям HgTe. На рисунке ниже представлена 
         зависимость пороговой энергии оже-рекомбинации (вычисленной в модели) и толщины КЯ при двух разных концентрациях состава ям
-        от доли Cd в барьерах для температуры 40K, 
+        от доли Cd в барьерах для температуры 40 K, 
         при фиксированной величине ширины запрещённой зоны, составляющей $67~meV$. Из рисунка видно, что максимальная пороговая энергия (что оптимально 
         с точки зрения максимальной температуры генерации стимулированного излучения) достигает величины 38 meV при доле Cd 0.67 и чистой яме, а также 
-        17 meV при высоте барьеров в 0.3.
+        17 meV при высоте барьеров около 0.3.
 
     \begin{figure}[h]
     \vspace{0.75cm}
@@ -321,7 +329,7 @@
             \includegraphics[width=1\linewidth]{./images/de_vs_x.pdf}
 
             \vspace{0.75cm}
-            \textbf{Пороговая энергия Оже-процессов и толщина КЯ.}
+            \caption{Пороговая энергия Оже-процессов и толщина КЯ.}
             Расчеты проводились при $T= 40~K$, $E_g \approx 67~meV$.
             \vspace{1.25cm}
         \end{center}
@@ -331,7 +339,7 @@
     Из сравнения начальных состояний частиц для случаев с "чистой" и "грязной" ямой в предыдущем разделе видно, 
     что «эффективная масса» дырок для оже-процесса в HgTe квантовой яме 
     существенно меньше, чем в Cd${}_{0.1}$Hg${}_{0.9}$Te квантовой яме. Это связано с наличием в в Cd${}_{0.1}$Hg${}_{0.9}$Te квантовой яме ярко выраженного бокового 
-    экстремума в верхней валентной подзоне. Хорошо известно, что увеличение эффективной массы дырок приводит к снижению пороговой энергии 
+    экстремума в верхней валентной подзоне \ref{impure_18um}. Хорошо известно, что увеличение эффективной массы дырок приводит к снижению пороговой энергии 
     Оже-процесса. Наличие максимума на зависимости пороговой энергии от доли кадмия в HgTe/Cd${}_{x}$Hg${}_{1-x}$Te обусловлено наличием минимума 
     «эффективной массы» дырок при определенной доле кадмия. Следует отметить, условность использованного здесь термина «эффективная масса» 
     для верхней валентной подзоны, поскольку закон дисперсии в ней не квадратичный и, вообще говоря, немонотонный.
@@ -348,8 +356,8 @@
     может предотвратить возникновение канала оже-рекомбинации типа CCHC через них. Однако кроме того методом численной оптимизации параметров 
     подобных структур могут быть получены параметры, при которых порог оже-рекомбинации в теории будет являться бесконечным (в частности можно добиться почти 
     гиперболического закона дисперсии). Однако на текущий момент подобные структуры не могут быть выращены в силу высоких требований к чистоте исполнения и 
-    прецизионного выдерживания толщины КЯ. Более того в таких случаях невозможно рассмотрение лишь радиальной составляющей дисперсионного соотношения,
-    поскольку учёт зависимости $\varepsilon(\varphi)$ будет всегда давать более низкий порог Оже-рекомбинации.
+    прецизионного выдерживания толщины КЯ. Более того в таких случаях рассмотрение лишь радиальной составляющей дисперсионного соотношения будет давать существенную ошибку $\varepsilon_{th}$,
+    поскольку учёт зависимости $\varepsilon(\varphi)$ будет всегда давать более низкий порог оже-рекомбинации.
 
     Более того, наличие подобных боковых минимумов превращает подобную структуру в квазинепрямозонную, что может радикально снижать возможность излучательной 
     рекомбинации из этих точек k-пространства. 
@@ -358,9 +366,10 @@
     что, с одной стороны, обуславливает возможность изучения образцов с одинаковой структурой, с другой - плохо влияет на воспроизводимость измерений,
     а также осложняет сравнение полученных результатов с теорией.
 
-    Возможно, перспективным будет являться создание структур с легированием, что позволит искусственно повысить одного из типов носителей заряда и реализовать 
+    Возможно, перспективным будет являться создание структур с легированием, что позволит искусственно повысить концентрацию одного из типов носителей заряда и реализовать 
     ситуацию в которой, вопреки дисперсионному соотношению будет превалировать тот или иной механизм Оже-рекомбинации. Это может быть полезным как с точки зрения 
     фундаментальных исследований, так и с точки зрения простоты оптимизации структур (можно будет заботиться о темпе рекомбинации всего по одному механизму). 
     Более того это может интересно в перспективе с позиции создания быстрых полупроводниковых детектеров, работающих в этой же области электромагнитного спектра 
-    (в данном случае оже-процессы будут играть уже положительную роль).
+    (в данном случае оже-процессы будут играть уже положительную роль). Также стоит отметить возможность создания приборов на основе HgTe/CdHgTe, использующих
+    примесные состояния \cite{Kozlov:2019}.
 \end{document}
