--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -3,9 +3,9 @@
 \begin{document}
     \chapter{Заключение}
 
-    В данной работе для волноводных гетероструктур с КЯ HgCdTe/CdHgTe излучающих в области длин волн 14-18 $\mu m$ были проведены оценки максимальной
-    энергии оже-рекомбинации CCHC процесса для различных параметров материала и толщин КЯ-м и составов барьерных слоев. Обнаружено, что 
+    В данной работе для волноводных гетероструктур с КЯ HgCdTe/CdHgTe излучающих в области длин волн 14-18 $\mu m$ были проведены оценки минимальной
+    энергии оже-рекомбинации для различных параметров материала и толщин КЯ-м и составов барьерных слоев. Обнаружено, что 
     максимальное значение пороговой энергии оже-рекомбинации равное 38 $meV$ для длины волны 18 $\mu m$ можно получить в квантовых ямах из «чистого»  
-    HgTe и барьерах с составами  Cd${}_{y}$Hg${}_{1-y}$Te от 0.5 до 0.7.  Результаты показывают перспективы создание межзонных лазеров на основе  гетероструктур с 
-    КЯ HgCdTe/CdHgTe в диапазоне длин волн от 14 до 18 работающих при температурах вплоть до 200 K. 
+    HgTe и барьерах с составами  Cd${}_{y}$Hg${}_{1-y}$Te от 0.5 до 0.7.  Результаты численных расчётов показывают перспективы создания межзонных лазеров на основе  гетероструктур с 
+    КЯ HgTe/CdHgTe в диапазоне длин волн от 14 до 18 работающих при температурах вплоть до 200 K. 
 \end{document}
