--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -4,16 +4,16 @@
     \chapter{Введение}
 
 Одной из наиболее актуальных проблем современной прикладной физики является
-получение источников когерентного излучения терагерцового (THz) диапазона. Такие
+получение источников когерентного излучения терагерцового (ТГц) диапазона. Такие
 источники могли бы использоваться во множестве медицинских приложений, ввиду достаточно 
-малого поглащения этого излучения тканями человека, что позволило бы разработать 
+малого поглощения этого излучения тканями человека, что позволило бы разработать 
 новые неинвазивные методы диагностики онкологии и иных заболеваний; другим возможным 
 применением может стать спектроскопия сложных органических соединений, поскольку 
 они имеют вращательные и колебательные степени свободы, имеющие соответствующие частоты 
 лежащие именно в терагерцовом диапазоне.
 
 В настоящее время имеется несколько способов генерации подобного излучения, которые, однако, 
-имеют много недостатков. Одним из классов таких приборов являются квантово-каскадные лазеры (QCL).
+имеют много недостатков. Одним из классов таких приборов являются квантово-каскадные лазеры (ККЛ).
 Они демоснтрируют превосходные характеристики (высокий КПД, высокий уровень когерентности)
 в диапазоне 1-5 THz и выше 15 THz \cite{Intro1}. Однако большая часть таких лазеров создается на основе 
 полупроводников типа A3B5 (GaAs, PbSb или InP), которые имеют высокое поглощение на оптических 
@@ -21,22 +21,26 @@
 стороны низких частот (относительно частот оптических фононов), но их рабочие характеристики 
 требуют значительного улучшения \cite{Intro7}.
 
-Альтернативой QCL являются лазеры на основе межзонных переходах в узкозонных полупроводниковых структурах.
-Такие лазеры намного проще в изготовлении, а также могут излучать в диапазоне 5-15 THz. Кроме того, их 
+Альтернативой ККЛ являются лазеры на основе межзонных переходов в узкозонных полупроводниковых структурах.
+Такие лазеры намного проще в изготовлении, а также позволяют наблюдать стимулированное излучение и генерацию
+в диапазоне 5-15 THz. Кроме того, их 
 отличительной чертой является возможность перестройки частоты в достаточно широком диапазоне, за счет 
 изменения температуры. Однако ограничивающим
-фактором является процесс безызлучательной Оже-рекомбинации. При этом традиционно ожидается, что этот процесс
-рекомбинации будет весьма существенным.
+фактором является процесс безызлучательной Оже-рекомбинации. При этом традиционно ожидается, что вероятность 
+межзонной оже-рекомбинации растёт с уменьшением ширины запрещённой зоны, что может затруднить получение 
+стимулированного излучения.
 
 Оже-рекомбинация представляет собой безызлучательный трёхчастичный процесс. По типу носителей заряда, участвующих
 в процессе он делится на CCHC и HHCH процессы (процесс с участием двух электронов и дырки и процесс с двумя дырками
-и электронм соответственно). В ходе этого процесса пара носителей с противоположным зарядом взаимоуничтожается и
-передаёт энергию и импульс третьему. В силу выполнения законов сохранения этот процесс является пороговым.
-Поэтому температура сильнг влияет на темп таких процессов, а значит и на эффективность лазеров.
+и электронм соответственно). В ходе этого процесса пара носителей с противоположным зарядом рекомбинирует и
+передаёт энергию и импульс третьему. В силу ограничений, накладываемых законами сохранения энергии и импульса,
+ этот процесс является пороговым.
+Поэтому температура сильно влияет на темп таких процессов, а значит и на эффективность лазеров.
 
 Повлиять на это можно, варьируя материалы/структуры и изменяя тем самым дисперсионные соотношения в них. В частности,
 существуют законы дисперсии, в которых такие процессы принципиально запрещены законами сохраниения (к примеру Дираковский 
-или графеноподобный закон дисперсии), а возможны структуры, в которых энергетический порог таких эффектов стремится к нулю.
+закон дисперсии для массовых частиц). С другой стороны возможны структуры, в которых энергетический порог таких оже-процессов к нулю
+(к примеру Дираковский закон дисперсии безмассовых частиц).
 
 Спектральный диапазон 5 - 15 THz к настоящему моменту частично 
 перекрыт лишь диодными лазерами на основе халькогенидов свинца-олова, которые обеспечивают длины 
@@ -45,19 +49,20 @@
 ограничены технологией роста: существуют труднопреодолимые проблемы в реализации квантовых ям (КЯ) для твердых растворов 
 PbSnSe(Te) и остаточная концентрация носителей остается на высоком уровне $10^{17} \text{cm}^{-3}$. К тому же технология производства подобных
 полупроводников пока не отработана в достаточной мере, что не позволяет выращивать структуры с квантовыми ямами и единственной возможностью
-влиять на дисперсионное соотношение и ширину запрещенной зоны является изменение состоава.
+влиять на дисперсионное соотношение и ширину запрещенной зоны является изменение состава.
 
 Существуют альтернативные полупроводниковые системы, которые позволяют
 приблизиться к дираковскому закону дисперсии, но сохранить конечную ширину запрещенной зоны. 
-Как было показано в многочисленных работах, одна из таких систем - гетероструктуры с КЯ на основе Hg(Cd)Te/CdHgTe. 
+Как было показано в многочисленных работах \cite{Rumyantsev:IOP:2018},\cite{Rumyantsev:2019}, одна из таких систем - гетероструктуры с КЯ на основе Hg(Cd)Te/CdHgTe. 
 В отличие от графена, в структурах на основе HgCdTe (КРТ) с КЯ можно перестраивать ширину запрещенной зоны путем изменения ширины КЯ и 
 содержания Cd в ней. Современная молекулярно-лучевая эпитаксия (МЛЭ) обеспечивает высокое качество эпитаксиальных пленок КРТ не только на подложках CdZnTe, 
-но и на «альтернативных» подложках GaAs \cite{Varavin:2003}. Высокое качество эпитаксиальных структур HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
+но и на «альтернативных» подложках GaAs \cite{Varavin:2003}. Высокое качество эпитаксиальных структур \\HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
 фотопроводимости (ФП) и фотолюминесценции (ФЛ) в среднем и дальнем инфракрасном диапазонах ($λ$ = 15-30 $\mu m$). Было получено 
-стимулированное излучение (СИ) в КРТ структурах с КЯ на длине волны $λ$ = 19.5 $\mu m$, в то время как ранее лазерная генерация в HgCdTe была 
+стимулированное излучение (СИ) в КРТ структурах с КЯ на длине волны до 20.3 $\mu m$ \cite{Rumyantsev:IOP:2018}, в то время как ранее лазерная генерация в HgCdTe была 
 продемонстрирована лишь в коротковолновой области среднего инфракрасного диапазона спектра (на длинах волн 2 - 5 $\mu m$). 
-Для структур, рассчитанных на генерацию длинноволнового излучения, требуется рост толстых эпитаксиальных слоев (общей толщиной до 20 $\mu m$) для реализации диэлектрического волновода. 
-Целью работы настоящей работы было исследование длинноволнового СИ из подобных структур и выявление факторов, определяющие наблюдаемые характеристики СИ, и возможных путей подавления 
-безызлучательной рекомбинации в таких структурах. В работе было продемонстрировано, что возможно подавление Оже-процессов в подобных структурах за счет увеличения его порога. Рассмотрены 
-способы его повышения за счет изменения толщины и состава квантовых ям, состава барьеров.
+%Для структур, рассчитанных на генерацию длинноволнового излучения, требуется рост толстых эпитаксиальных слоев (общей толщиной до 20 $\mu m$) для реализации диэлектрического волновода. 
+Целью настоящей работы было исследование длинноволнового СИ из подобных структур и выявление факторов, определяющих наблюдаемые характеристики СИ, и возможных путей подавления 
+безызлучательной рекомбинации в таких структурах. В работе было продемонстрировано, что возможно подавление Оже-процессов в подобных структурах за счет увеличения его порога 
+\cite{Rumyantsev:2019}. Рассмотрены 
+способы его повышения за счет изменения толщины и состава квантовых ям, а также состава барьеров.
 \end{document}
