--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -6,37 +6,34 @@
     
     \section{Методика исследования фотолюминисценции}
    
-    Основным методом исследования образцов в данной работе является измерение 
-    фотолюминисценции. Поскольку основной задачей является получение твердотельных лазеров 
+    Поскольку основной задачей является получение твердотельных лазеров 
     на основе HgCdTe наногетероструктур, работающих в разумном диапазоне температур (77-300K),
     при котором возможно функционирование лазера с охлаждением жидким азотом,
-    оценка зависимости интенсивности вынужденного или спонтанного излучения в зависимости от 
-    температуры и внутренней структуры образцов представляет особый интерес.
+    оценка зависимости интенсивности вынужденного или спонтанного излучения от 
+    температуры и внутренней структуры образцов представляет особый интерес. Поэтому
+    основным методом исследования образцов в данной работе является измерение 
+    фотолюминисценции.
 
     Исследуемый образец помещается в вакуумный криостат ARS-Cryotech с гелиевым охлаждением и
-    возможностью нагрева образцов до необходимой температуры  в пределах $7 - 300 K$. Входное 
+    возможностью нагрева образцов до необходимой температуры  в пределах 7 - 300 K . Входное 
     отверстие как правило закрывается ZnSe окном, что позволяло заводить внутрь накачку во всем 
     требуемом диапазоне $600~nm - 15~\mu m$. На выходе же стояло окно из KRS-5, которое прозрачно
     в диапазоне $600~nm-50~\mu m$.
     
-    Структуры облучались лазером $CO_2$ с длиной волны $10.6~\mu m$ с мощностью 10 MW в импульсе соответственно.
-    При этом лазеры были импульсными или искуственно модулировались механическим способом.
+    Структуры возбуждались лазером $CO_2$ с длиной волны $10.6~\mu m$ с мощностью от 100 W до 10 MW в импульсе соответственно
+    и длительностью импульса 100 $ns$ с частотой повторения $5-10~Hz$.
 
     При этом использовался фурье спектрометр Bruker Vertex V80, в режиме пошагового сканирования. 
-    Этот режим позволяет передвигать зеркало спектрометра дискретно, что позволяет более точно его
-    позиционировать тем самым повышая эффективное разрешение и снижая коэффициент сигнал/шум.
-    Кроме того в силу устройства установки зеркало может колебаться некоторое время после установки
-    размывая картину, воизбежание этого съём сигнала происходил через некоторое время после 
-    позиционирования.
+    Этот режим позволяет передвигать зеркало спектрометра дискретно, что позволяет существенно подавить сигнал комнатного фона,
+    который обладает высокой интенсивностью в среднем и дальнем инфракрасном диапазоне.
 
-    В качестве приемника использовался болометр производства IRLabs с 
-    высокой чувствительностью в диапазоне $16 - 300 ~\mu m$ . Также некоторые измерения были произведены при помощи 
-    полупроводникового детектора на основе MCT (также производства IRLabs), позволяющего  улавливать 
-    излучение в диапазоне $\hdots - 16\~\mu m$.
+    В качестве приемника использовался кремниевый болометр производства IRLabs с 
+    полосой чувствительности в диапазоне $16 - 300 ~\mu m$ . Также некоторые измерения были произведены при помощи 
+    полупроводникового детектора на основе MCT (также производства IRLabs), имеющего полосу чувствительности $4 - 16~\mu m$.
 
     Воизбежание паразитной засветки детекторов излучением накачки (интенсивность которого на много порядков 
-    превышало излучение как исследуемого спонтанного, так и вынужденного излучения образцов) использовался набор интерференционных и 
-    полупроводниковых фильтров, позволяющий эффективно ослаблять излучение в неинтересующем нас диапазоне.
+    превышало излучение как исследуемого спонтанного, так и вынужденного излучения образцов) использовался набор оптических фильтров,
+    изготовленных из TPX и  позволяющих эффективно ослаблять излучение в неинтересующем нас диапазоне.
     
     \vspace{0.75cm}
     \begin{figure}[h]
@@ -75,21 +72,21 @@
         \end{tikzpicture}
         \vspace{0.75cm}
 
-        \textbf{Геометрия задачи исследования фотолюминисценции}
+        \caption{Геометрия задачи исследования фотолюминисценции}
         \vspace{1.25cm}
     \end{minipage}
     \end{figure}
 
-    Для снижения влияния ЭМ наводок, а также для эффективного усиления использовались 
+    Для снижения влияния электромагнитных наводок, а также для эффективного усиления использовались 
     усилители напряжения Standford SR560, включающие в себя регулируемые частотные фильтры 6db, 12db. 
     Правильная настройка таких фильтров позволяет существенно повысить соотношение сигнал/шум, 
     а также полностью нейтрализовать гармоники 50 Hz, которые являются основной компонентой наведённого шума.
 
-    В случае импульсного режима накачки использовался синхродетектор Standford SR850, его использование
-    позволяет существенно снизить время измерения за счет отсутствия необходимости программного усреднения 
-    результатов измерения встроенного АЦП.
+    %В случае импульсного режима накачки использовался синхродетектор Standford SR850, его использование
+    %позволяет существенно снизить время измерения за счет отсутствия необходимости программного усреднения 
+    %:результатов измерения встроенного АЦП.
 
-    Основным ПО при обработке спектров являлся Opus 7.0. В частности это позволяет записывать временно-разрещённые спектры,
+    Основным программным обеспечением, использованным при обработке спектров, являлся Opus 7.0. В частности это позволяет записывать временно-разрешённые спектры,
     а также в существенной мере отфильтровать шумы посредством правильной рбработки интерферограммы.
     \begin{figure}[h]
     \begin{minipage}[h]{\linewidth}
@@ -128,7 +125,7 @@
         \end{tikzpicture}
         \vspace{0.75 cm}
 
-        \textbf{Принципиальная схема эксперимента фотолюминисценции}
+        \caption{Принципиальная схема эксперимента фотолюминисценции}
         \vspace{1.25 cm}
         \end{center}
     \end{minipage}
@@ -136,13 +133,84 @@
 
     
     \section{Методика исследования фотопроводимости}
-    Иной важной техникой является измерение фотопроводимости. Этот метод позволяет с высокой степенью точности
+
+    \begin{figure}[h!]
+        \begin{minipage}[h]{\linewidth}
+            \begin{center}
+                \begin{tikzpicture}
+                    \filldraw[fill=gray] (2,0) -- (1.5, -0.5) -- (1.5, -2)
+                        -- (1.5, -2) arc(0:180:-0.625)
+                        -- (2.75, -2) -- (2.75, -0.5) -- (2.25, 0)
+                        -- (2.25, 0.5) -- (3, 0.5) -- (3, -3)
+                        -- (1.25, -3) -- (1.25, 0.5) -- (2, 0.5) -- (2, 0);
+                    
+                    \node at (1.5, 0.8) {A};
+                        
+                    \filldraw[fill=lightgray] (1.5, -1.75)
+                        -- (1.5, -2) arc(0:180:-0.625)
+                        -- (2.75, -1.75);
+                        
+                    \node at (2.475, -1.9) {B};
+                        
+                    
+                    \filldraw[fill=white] (2.05, -2) -- (2.05, 0.75) -- (2, 0.75)
+                        -- (2.25, 1) -- (2.25, 0.95) -- (5, 0.95)
+                        -- (5, 0.8) -- (2.2, 0.8) -- (2.2, 0.75)
+                        -- (2.2, -2);
+                        
+                    \node at (3, 1.25) {C};
+                        
+                    \filldraw[fill=darkgray] (2.05, -2) rectangle (2.2, -1.95);
+                    
+                    \draw[->, thick, dashed] (2.125, -2) -- (2.125, -4);
+                    
+                    \draw[->, thick] (5, 0.875) -- (2.125, 0.875) -- (2.125, -1.95);
+                    
+                    \filldraw[fill=lightgray] (1.5, -5.25) rectangle (2.75, -4);
+                    
+                    \node at (2.125, -4.625) {F};
+                    
+                    \filldraw[fill=lightgray] (5, 0) rectangle (6.75, 1.75);
+                    
+                    \node at (5.875, 0.875) {D};
+                    
+                    \filldraw[fill=lightgray] (5, -3) rectangle (6.75, -1.25);
+                    
+                    \node at (5.875, -2.125) {E};
+                    
+                    \draw (5.775, -1.25) rectangle (5.975, 0);
+                    
+                    \draw[->, thick] (5.875, -1.25) -- (5.875, 0);
+                    
+                    \filldraw[fill=lightgray] (5, -5.25) rectangle (6.75, -3.5);
+                    
+                    \node at (5.875, -4.375) {G};
+                    
+                    \draw[->, thick, dashed] (5.875, -3) -- (5.875, -3.5);
+                    
+                    \draw[->, thick, dashed] (2.75, -4.625) -- (5, -4.625);
+                    
+                    \draw[->, thick, dashed] (6.75, 0.875) -- (7, 0.875)
+                        -- (7, -4.375) -- (6.75, -4.375);
+                \end{tikzpicture}
+                \vspace{0.75cm}
+                
+                \caption{Принципиальная схема измерения фотопроводимости}
+    
+                A - сосуд Дюара, B - жидкий гелий или азот, C - оптический тракт, D - фурье-спектрометр, 
+                E - источник излучения, G - ПК и ПО.
+    
+                \vspace{1.25cm}
+            \end{center}
+            \end{minipage}
+        \end{figure}
+    Для характеризации исследуемых образцов использовалась методика измерения фотопроводимости. Этот метод позволяет с высокой степенью точности
     определять ширину запрещённой зоны полупроводниках, а также уровни размерного квантования в случае гетероструктур
     с квантовыми ямами. Это требуется для оценки содержания кадмия в барьерах и внутреннем пространстве квантовых ям, а также
     для проверки точности исполнения гетероструктуры в поперечном плоскости образца направлении.
 
     Фурье спектрометр в данном случае работает в режиме непрерывного сканирования, а образец охлаждается иммерсивно.
-    Для таких ихмерений важно исключить влияние спектра поглощения хладагента на результирующий спектр, для этого
+    Для таких измерений важно исключить влияние спектра поглощения хладагента на результирующий спектр, для этого
     минимизируется расстояние от образца до фильтров, после которого в погружном устройстве следует вакуум.
     
     Также требуется отметить, что в таком режиме измерений в силу конструктивных причин невозможно использовать вакуумированный
@@ -162,93 +230,22 @@
     Кроме вышеперечисленного оборудования использовался токовый усилитель Standford SR570, который также способен выдавать
     ток смещения. В силу специфики образцов мы можем считать их сопротивление линейным, посему полученный
     в результате измерений, сигнал не нуждается в дополнительной обработке.
-    \vspace{0.75cm}
-    \begin{figure}[h]
-    \begin{minipage}[h]{\linewidth}
-        \begin{center}
-			\begin{tikzpicture}
-				\filldraw[fill=gray] (2,0) -- (1.5, -0.5) -- (1.5, -2)
-					-- (1.5, -2) arc(0:180:-0.625)
-					-- (2.75, -2) -- (2.75, -0.5) -- (2.25, 0)
-					-- (2.25, 0.5) -- (3, 0.5) -- (3, -3)
-					-- (1.25, -3) -- (1.25, 0.5) -- (2, 0.5) -- (2, 0);
-				
-				\node at (1.5, 0.8) {A};
-					
-				\filldraw[fill=lightgray] (1.5, -1.75)
-					-- (1.5, -2) arc(0:180:-0.625)
-					-- (2.75, -1.75);
-					
-				\node at (2.475, -1.9) {B};
-					
-				
-				\filldraw[fill=white] (2.05, -2) -- (2.05, 0.75) -- (2, 0.75)
-					-- (2.25, 1) -- (2.25, 0.95) -- (5, 0.95)
-					-- (5, 0.8) -- (2.2, 0.8) -- (2.2, 0.75)
-					-- (2.2, -2);
-					
-				\node at (3, 1.25) {C};
-					
-				\filldraw[fill=darkgray] (2.05, -2) rectangle (2.2, -1.95);
-				
-				\draw[->, thick, dashed] (2.125, -2) -- (2.125, -4);
-				
-				\draw[->, thick] (5, 0.875) -- (2.125, 0.875) -- (2.125, -1.95);
-				
-				\filldraw[fill=lightgray] (1.5, -5.25) rectangle (2.75, -4);
-				
-				\node at (2.125, -4.625) {F};
-				
-				\filldraw[fill=lightgray] (5, 0) rectangle (6.75, 1.75);
-				
-				\node at (5.875, 0.875) {D};
-				
-				\filldraw[fill=lightgray] (5, -3) rectangle (6.75, -1.25);
-				
-				\node at (5.875, -2.125) {E};
-				
-				\draw (5.775, -1.25) rectangle (5.975, 0);
-				
-				\draw[->, thick] (5.875, -1.25) -- (5.875, 0);
-				
-				\filldraw[fill=lightgray] (5, -5.25) rectangle (6.75, -3.5);
-				
-				\node at (5.875, -4.375) {G};
-				
-				\draw[->, thick, dashed] (5.875, -3) -- (5.875, -3.5);
-				
-				\draw[->, thick, dashed] (2.75, -4.625) -- (5, -4.625);
-				
-				\draw[->, thick, dashed] (6.75, 0.875) -- (7, 0.875)
-					-- (7, -4.375) -- (6.75, -4.375);
-            \end{tikzpicture}
-            \vspace{0.75cm}
-            
-            \textbf{Принципиальная схема измерения фотопроводимости}
 
-            A - сосуд Дюара, B - жидкий гелий или азот, C - оптический тракт, D - фурье-спектрометр, 
-            E - источник излучения, G - ПК и ПО.
+    \section{Исследуемые образцы и экспериментальные данные}
 
-            \vspace{1.25cm}
-        \end{center}
-        \end{minipage}
-    \end{figure}
-
-    \section{Рассматриваемые образцы}
-
-    Во многом дизайн рассматриваемых гетероструткур обусловлен технологическими особенностями их роста.
-    Все образцы были получены посредством молекулярно "= лучевой эпитаксии в ИФП СО РАН.
-    Обязательным условием возможности создания таких структур является буфер между подложкой 
+    Все образцы были выращены на поверхности GaAs подложки с плоскостью роста [013]  посредством молекулярно "= лучевой эпитаксии в ИФП СО РАН \cite{Varavin:2003}.
+    Такое направление было выбрано в силу технологических причин (более высокая скорость роста структуры).
+    Обязательным условием возможности создания таких структур является буфер CdTe между подложкой 
     и участком с квантовыми ямами, обеспечивающий согласование приодов решётки кристалла, а также нивелирующий
-    до некоторой степени разность в коэффициентах термического расширения образцов. Также буферный слой играет 
+    до некоторой степени разность в коэффициентах термического расширения материалов. Также буферный слой играет 
     роль нижней частью волновода, рассчитанного на длину волны, соответствующую нижнему возбужденному состоянию квантовых ям.
 
     Сам участок с квантовыми ямами растится в автоматическом режиме, что позволяет с высокой точностью выдерживать
     требуемый профиль прямоугольных квантовых ям, характерная толщина которых составляет 3-10 nm при ошибке порядка 0.1 nm.
-    Однако подобный режим роста не позволяет обеспечивать требуемую точность концентрации, которая может нарушаться ввиду оседания
+    Однако подобный режим роста не позволяет обеспечивать требуемую точность состава, которая может нарушаться ввиду оседания
     части напыляемого материала на стенках камеры.
 
-    Также следует отметить влияение количества квантовых ям на возможный уровень фотолюминисценции. В данном случае мы можем расматривать
+    Также следует отметить влияние количества квантовых ям на возможный уровень фотолюминисценции. В данном случае мы можем расматривать
     структуры как лазер с квазидвухуровневой средой. Такое рассмотрение возможно в силу сравнения времён накачки и теплового рассеяния:
     $\tau_p \gg \tau_\varepsilon$. Как известно в таких средах огромный вклад вносят процессы перепоглощения испускаемых фотонов. При таком
     подходе видно, что КПД устройства будет снижаться при большом количестве КЯ, что обусловлено увеличением эффективного времени жизни инверсии
@@ -257,35 +254,35 @@
     оптимального числа квантовых ям. В текущих образцах количество КЯ варьируется в диапазон 5-10 штук.
 
     Вторым ключевым элементом конструкции подобных гетероструктур является волновод, который с одной стороны позволяет создать стоячую волну, которая
-    при правильном подборе параметров позволяет локализовать пучности ЭМ поля в точках, имеющих и наибольший квадрат модуля огибающей волновой функции электронов, 
-    что позволяет существенно увеличить матричный элемент перехода с нижнего энергетического урованя на первый возбужденный.
+    при правильном подборе параметров позволяет локализовать пучности ЭМ поля вблизи квантовых ям.
+    Это позволяет существенно увеличить матричный элемент перехода с нижнего энергетического урованя на первый возбужденный.
 
-    \section{Экспериментальные данные}
-    В ходе работы были проведено множество экспериментов по измерению фотлюминисценции образцов.
-    Однако для иллюстрации зависимости порога Оже-процесса и температуры гашения СИ были избранны 
-    два образца, рассчитанные на 14 и 18 $\mu m$ длины волн.
+    В ходе работы было проведено множество экспериментов по измерению фотлюминисценции образцов.
+    Однако для иллюстрации зависимости порога Оже-процесса и температуры гашения СИ были выбранны 
+    два образца, рассчитанные на длины волн 14 и 18 $\mu m$.
 
-    Первым примером будет образец из ещё не вышедше статьи \cite{Utochkin:PTS:2019}. Рассматривался образец, содержащий 10 несвязанных
+    Первым примером будет образец из работы \cite{Utochkin:PTS:2019}. Рассматривался образец, содержащий 10 несвязанных туннельно
     (имеющих меж собой широкие и "высокие" барьеры) квантовых ям
     состава Hg${}_{0.903}$Cd${}_{0.097}$Te/Cd${}_0.7$Hg${}_{0.3}$Te и толщиной 7.4 $nm$, что соответствует ширине 
     запрещённой зоны около 90 $meV$ ($\lambda \sim 14~\mu m$) при $T = 18 ~K$. Структура не была намеренно легирована; остаточная концентрация 
-    носителей p-типа, полученная на основе холловских измерений, составляла порядка единиц $10^10~cm^{-2}$, а типичная 
+    носителей p-типа, полученная на основе холловских измерений, составляла порядка единиц $10^{10}~cm^{-2}$, а типичная 
     плотность дислокаций $\sim 10^6~cm^{-2}$. Дизайн структуры ориентирован на эффективную локализацию света вблизи КЯ, для 
-    чего массив КЯ был выращен в волноводном слое толщиной в единицы $\mu m$. Выбранное направление роста (013) 
-    препятствует использованию сколотых граней кристалла в качестве зеркал резонатора, т.к. плоскости сколов образуют
-    острый угол с плоскостью КЯ.
+    чего массив КЯ был выращен в волноводном слое. 
+    %Выбранное направление роста [013] 
+    %препятствует использованию сколотых граней кристалла в качестве зеркал резонатора, т.к. плоскости сколов образуют
+    %острый угол с плоскостью КЯ.
 
     Второй образец представляет собой 10 КЯ состава Cd${}_{0.1}$Hg${}_{0.9}$Te/Cd${}_{0.65}$Hg${}_{0.35}$Te
     с толщиной ям порядка 8.7 $nm$.
-    Этот образец имеет ширину запрещённой зоны порядка 70 $meV$ ($\lambda \sim 18~\mu m$) и позволяет наблюдать стимулированное 
+    Этот образец имеет ширину запрещённой зоны около 70 $meV$ ($\lambda \sim 18~\mu m$) и позволяет наблюдать стимулированное 
     излучение на этой длине волны в диапазоне  20-50 K. В остальном эта структура аналогична предыдущей.
 
     Ширина запрещённой зоны была подтверждена методом фотопроводимости. Это позволило удостовериться в правильности последующих 
     расчетов и подтвердить наблюдение именно межзонной фотолюминисценции.
 
-    В ходе измерения были получены следующие спектры сфотолюминисценции:
+    В ходе измерения были получены спектры фотолюминисценции, приведённые ниже \ref{spectre_14um}, \ref{spectre_18um}.
 
-    \begin{figure}[h]
+    \begin{figure}[hbp!]
         \vspace{0.75cm}
         \begin{minipage}[h]{\linewidth}
             \begin{center}
@@ -293,8 +290,8 @@
                 \includegraphics[width=0.75\linewidth]{./images/new_14um_spectre.pdf}
 
                 \vspace{0.75cm}
-                \textbf{Спектры стимулированного излучения для структуры, 
-                    рассчитаной на 14 $\mu m$.}
+                \caption{\label{spectre_14um}Спектры стимулированного излучения для структуры, 
+                    рассчитаной на длину волны 14 $\mu m$.}
                 \vspace{0.75cm}
             \end{center}
         \end{minipage}
@@ -304,23 +301,23 @@
                 \includegraphics[width=0.75\linewidth]{./images/new_18um_spectre.pdf}
 
                 \vspace{0.75cm}
-                \textbf{Спектр стимулированного излучения для структуры, 
-                    рассчитаной на 18 $\mu m$.}
+                \caption{\label{spectre_18um}Спектр стимулированного излучения для структуры, 
+                    рассчитаной на длину волны 18 $\mu m$.}
                 \vspace{0.75cm}
             \end{center}
         \end{minipage}
     \end{figure}
 
     Как можно видеть, при изменении температуры происходит сдвиг излучения в сболее коротковолновую область, а также снижение 
-    интенсивности стимулированного излучения. Отчасти снижение излучения структуры может быть объяснено тем, что длина волны становится 
-    нерезонансной для внутренней волноводной структуры. С другой стороны, за счёт нетипичного поведения ширины запрещенной 
+    интенсивности стимулированного излучения. Отчасти это может быть объяснено тем, что длина волны становится 
+    нерезонансной для внутренней волноводной структуры за счёт изменения ширины запрещённой зоны. С другой стороны, за счёт нетипичного поведения ширины запрещенной 
     зоны от температуры (для большинства материалов ширина запрещённой зоны растёт с ростом температуры) начинается излучение
     с меньшей длиной волны, что не так пагубно сказывается на добротности волновода как её рост. Отсюда можно сделать вывод о том, 
-    что этот эффект в данном случае не так существенен. Куда больше интереса представляет сравнение времен излучательной и 
-    Оже-рекомбинации, несмотря на то, что с ростом ширины запрещенной зоны темп излучательных процессов в целом возрастает, 
-    как и порог безызлучательных процессов. Также возрастает населенность состояний с более высокой энергией, что, напротив,
-    стимулирует Оже-рекомбинацию.
+    что этот эффект в данном случае не так существенен. Куда больший интерес представляет сравнение времен излучательной и 
+    оже-рекомбинации. Несмотря на то, что с ростом ширины запрещенной зоны темп излучательных процессов в целом возрастает, 
+    как и порог безызлучательных процессов, также возрастает населённость состояний с более высокой энергией, что, напротив,
+    стимулирует оже-рекомбинацию.
 
-    Отсюда возникает задача сравнения порога Оже-рекомбинации и тепловой энергии частиц, которые смогут характеризовать это 
+    Отсюда возникает задача расчёта порога оже-рекомбинации и его сравнения с тепловой энергией частиц, которые смогут характеризовать это 
     снижение интенсивности и температуру гашения СИ в целом.
 \end{document}
