--- a/sections/reIntro.tex
+++ b/sections/reIntro.tex
@@ -1,14 +1,14 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \chapter{Виды рекомбинации}
-    \section{Общие сведения }
+    \chapter{Излучательная и безызлучательная рекомбинация}
+    \section{Механизмы рекомбинации в полупроводниках}
     Как известно в полупроводниках существует несколько видов рекомбинации:
     излучательная, рекомбинация Шокли-Рида-Холла и оже-рекомбинация. 
     При этом последние два процесса происходят без излучения ЭМ волн и приводят
     к паразитному уменьшению инверсии населённостей, пользуясь терминами 
     лазерной техники. Излучательный же процесс является целевым при таком подходе.
-    \vspace{0.75cm}
+    \vspace{0.5cm}
     \begin{figure}[h]
         \begin{minipage}[h]{0.31\linewidth}
             \begin{center}
@@ -25,8 +25,9 @@
                 \draw[->, snake it] (0.1, 0.) -- (1.1, 0.);
                 \end{scope}
               \end{tikzpicture}
-              \vspace{0.75cm}
-              \textbf{Излучательная}
+
+              \bf{(А) Излучательная}
+              \vspace{0.2cm}
             \end{center}
         \end{minipage}
         \hfill
@@ -46,8 +47,10 @@
                     \draw[postaction={decorate}, red, thick] (0., -0.75) -- (0., 0.); 
                     \end{scope}
                   \end{tikzpicture}
-                  \vspace{0.75cm}
-                  \textbf{Рекомбинация ШРХ}
+                  
+
+                  \bf{(Б) Рекомбинация ШРХ}
+                  \vspace{0.2cm}
                 \end{center}
             \end{minipage}
             \hfill
@@ -68,10 +71,12 @@
                         \draw[color=black, fill=white] (1.15, 0.918) circle (.1);
                         \end{scope}
                       \end{tikzpicture}
-                      \vspace{0.75cm}
-                      \textbf{Оже-рекомбинация}
+
+                      \bf{(В) Оже-рекомбинация}
+                      \vspace{0.2cm}
                     \end{center}
                 \end{minipage}
+                \caption{Иллюстрация видов рекомбинации в полупроводниках}
     \end{figure}
 
     Излучательная рекомбинация в целом делится на вынужденную и спонтанную, имеющие
@@ -98,34 +103,35 @@
 
     Откуда следует вывод о том, что вероятность излучательной рекомбинации растёт
     с ростом ширины запрещённой зоны. В нашем же случаеособый интерес представляют
-    образцы с малым $E_g$, а потому излучательная рекомбинация зачастую оказывается
-    подавленной.
+    образцы с малым $\varepsilon_g$, а потому излучательная рекомбинация зачастую оказывается
+    имеющей вероятность, сравнимую с вероятностью безызлучательной рекомбинации.
 
     Однако не менее важным оказывается влияние безызлучательных процессов - они снижают
-    инверсию населённостей, и тем самым конкурируют с излучательными процессами. При больших 
-    длинах волн оказывается, что в силу низких темпов излучательной рекомбинации именно они
-    определяют время жизни носителей и тем самым величину инверсии населённостей.
+    инверсию населённостей, и тем самым конкурируют с излучательной рекомбинацией. При больших 
+    длинах волн оказывается, что в силу низких темпов излучательного процесса именно ШРХ- и 
+    оже-процессы определяют время жизни носителей заряда и тем самым величину инверсии населённостей.
 
-    Исторически первым открытвм процессом безызлучательной рекомбинации был процесс 
+    Исторически первым открытым процессом безызлучательной рекомбинации был процесс 
     Шокли-Рида-Холла. Он протекает с участием примеси, а потому может не учитываться 
-    в случае чистых полупроводников.
+    в случае достаточно чистых полупроводников. Также требуется добавить, что для такого процесса
+    существует насыщение ввиду конечного числа примесей.
 
-    В то же время существует ещё один процесс, который оказывается связан с видом дисперсионных
-    соотношений для электронов и дырок. Оказывается возможным процесс в который вступает
+    В то же время существует процесс оже-рекомбинации. В подобный процесс вступает
     3-и частицы: 2-е одного знака, 1-а - иного. В ходе такого процесса две частицы разных знаков
     взаимоуничтожаются, отдавая свою энерги и импульс третьей. Таким образом происходит не только
-    уничтожение носителей заряда, но и существенный разогрев оставшихся. 
+    уничтожение носителей заряда, но и существенный разогрев оставшихся. Разогретые неравновесные 
+    частицы ещё активнее вступают такие процессы.
 
     \section{Порог оже-рекомбинации}
 
-        При этом этот процесс оказывается пороговым, иначе говоря существует минимальная "кинетическая"
+        Оже-процесс является пороговым, иначе говоря существует минимальная "кинетическая"
     энергия трёх частиц, при которой становятся возможными такие переходы $\varepsilon_{th}$. Наличие этого 
     порога объясняется требованием выполнения законов сохранения импульса и энергии. 
     
-    \begin{figure}[h!!!]
+    \begin{figure}[h!]
         \begin{minipage}[h]{0.66\linewidth}
         В самом деле,
-        если мы возьмём все три частицы в гамма точке, то есть нулевой
+        если мы возьмём все три частицы в гамма точке, то есть при нулевой
         начальной "кинетической" энергией мы не сможем добиться выполнения закона сохранения энергии - 
         конечной частице просто негде будет находиться после прохождения такого процесса.
         А, если процесс с нулевой энергией невозможен, значит существует порог.
@@ -149,28 +155,30 @@
                       \end{scope}
                     \end{tikzpicture}
             \end{center}
+            \caption{Запрещённый CCHC переход}
         \end{minipage}
     \end{figure}
 
-    Его можно проиллюстрировать на примере параболических изотропных дисперсионных 
+    В наипростейшем случае параболических изотропных дисперсионных 
     соотношений для электронов и дырок \cite{AbakumovYassievich1997}. Оказывается,
     что в таком случае пороговая энергия и импульсы начальных частиц (два электрона
     в таком случаек должны находиться в одном состоянии) равны:
 
         \begin{equation}
             \begin{array}{l}
-                E_{th} = E_g \frac{m_c}{m_h ( 1 + m_c / m_h)};\\
-                p_{h} = p_{c} \frac{m_h}{m_c} = \sqrt{\frac{2m_c E_g}{(1+ 2m_c/m_h)(1+ m_c / m_h)}};
+                E_{th} = \varepsilon_g \frac{m_c}{m_h ( 1 + m_c / m_h)};\\
+                p_{h} = p_{c} \frac{m_h}{m_c} = \sqrt{\frac{2m_c \varepsilon_g}{(1+ 2m_c/m_h)(1+ m_c / m_h)}};
             \end{array}
         \end{equation}
 
     Как можно видеть, сама пороговая энергия пропорциональна ширине запрещённой зоны,
     откуда следует, что длинноволновые  лазеры будут испытывать большее влияние этого 
-    типа рекомбинации.
-
-    Важно отметить, что не меньшую роль играет соотношение эффективных
-    масс. Очевидно, что чем больше отношение $\mu = m_c / m_h$, тем больше будет порог.
+    типа рекомбинации. Важно отметить, что не меньшую роль играет оотношение эффективных
+    масс. Очевидно, что чем больше это отношение $\mu = m_c / m_h$, тем больше будет и порог
+    для этого процесса (однако в таком случае будет превалировать процесс типа HHCH).
 
     Отдельно стоит отметить свойства дираковского закона дисперсии. Оказывается, что 
-    для него запрещены оже-переходы.
+    для него полностью запрещены оже-переходы \cite{Vasko:2006}. Поэтому одним из 
+    возможных способов повысить порог оже-рекомбинации является создание структур, имеющих
+    близкий к релятивистскому закон дисперсии носителей заряда.
 \end{document}
