--- a/sections/samplesDesign.tex
+++ b/sections/samplesDesign.tex
@@ -46,6 +46,7 @@
     ситуацию в которой, вопреки дисперсионному соотношению будет превалировать тот или иной механизм Оже-рекомбинации. Это может быть полезным как с точки зрения 
     фундаментальных исследований, так и с точки зрения простоты оптимизации структур (можно будет заботиться о темпе рекомбинации всего по одному механизму). 
     Более того это может интересно в перспективе с позиции создания быстрых полупроводниковых детекторов, работающих в этой же области электромагнитного спектра 
-    (в данном случае оже процессы будут играть уже положительную роль).
+    (в данном случае оже-процессы будут играть уже положительную роль). Также стоит отметить возможность создания приборов на основе HgTe/CdHgTe, использующих
+    примесные состояния \cite{Kozlov:2019}.
     
 \end{document}
