--- a/sections/titlePage.tex
+++ b/sections/titlePage.tex
@@ -7,14 +7,14 @@
     
     \textbf{Федеральное государственное автономное образовательное учреждение высшего образования «Национальный исследовательский Нижегородский государственный университет им. Н.И. Лобачевского» (ННГУ)}
     
-    \vspace{0.1cm}
+    \vspace{0.0cm}
     Высшая школа общей и прикладной физики
     
     \end{center}
     
     
     \begin{center}
-    \Large{\bf{Исследование пороговой энергии оже-рекомбинации в волноводных структурах с квантовыми ямами HgСdTe в области 14 и 18 мкм}}
+    \large{\bf{Исследование пороговой энергии оже-рекомбинации в волноводных структурах с узкозонными квантовыми ямами на основе HgСdTe в области 14 и 18 мкм}}
     \end{center}
     
     \begin{flushright}
@@ -29,7 +29,7 @@
     Куликова Никиты Сергеевича
     
     % \vspace{6\mytextsize}
-    \vspace{0.1 cm}
+    \vspace{0.0 cm}
     \underline{Научный руководитель:}
     
     Заведующий лабораторией ИФМ РАН,
@@ -44,7 +44,7 @@
     \end{minipage}~С.В. Морозов
     
     % \vspace{6\mytextsize}
-    \vspace{0.1 cm}
+    \vspace{0.0 cm}
      \underline{Рецензент:}
     
     Старший научный сотрудник ИФМ РАН,
@@ -75,7 +75,7 @@
     
     \end{flushright}
     
-    \vspace{2.8cm}
+    \vspace{0.0cm}
     
     \begin{center}
     Нижний Новгород
